--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
          <h1>69</h1>
         </div>
         <div id="color">
-            <img src="./first/car-removebg-preview.png" alt=""> 
+            <img src="./car-removebg-preview.png" alt=""> 
             <div id="nav">
                 <h5>Home</h5>
                 <h5>About</h5>
